# e-commerce

api/: README.md  db.sqlite3  manage.py  pyproject.toml
api/jackets_django/: asgi.py  settings.py  wsgi.py
api/product/: models.py  urls.py  views.py
api/product/migrations/: 0001_initial.py  0002_product.py
djackets_ui/: README.md  package-lock.json  package.json
djackets_ui/src/: App.vue
djackets_ui/src/views/: Home.vue
