[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["tahany777 <tahanymohammed777@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
Pillow = "^9.2.0"
stripe = "^3.5.0"
djoser = "^2.1.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
